@@ -1,5 +1,5 @@
 /*
- * Copyright 2018-2022 the original author or authors.
+ * Copyright 2018-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -78,6 +78,8 @@ public class ChangelogGenerator {
 
 	private final List<ExternalLink> externalLinks;
 
+	private final boolean generateLinks;
+
 	public ChangelogGenerator(GitHubService service, ApplicationProperties properties) {
 		this.service = service;
 		this.repository = properties.getRepository();
@@ -89,6 +91,7 @@ public class ChangelogGenerator {
 		this.sections = new ChangelogSections(properties);
 		this.portedIssues = properties.getIssues().getPorts();
 		this.externalLinks = properties.getExternalLinks();
+		this.generateLinks = properties.getIssues().isGenerateLinks();
 	}
 
 	/**
@@ -120,14 +123,10 @@ public class ChangelogGenerator {
 	}
 
 	private int resolveMilestoneReference(String milestone) {
-		switch (this.milestoneReference) {
-			case TITLE:
-				return this.service.getMilestoneNumber(milestone, this.repository);
-			case ID:
-				return Integer.parseInt(milestone);
-			default:
-				throw new IllegalStateException("Unsupported milestone reference value " + this.milestoneReference);
-		}
+		return switch (this.milestoneReference) {
+			case TITLE -> this.service.getMilestoneNumber(milestone, this.repository);
+			case ID -> Integer.parseInt(milestone);
+		};
 	}
 
 	private String generateContent(List<Issue> issues) {
@@ -164,7 +163,8 @@ public class ChangelogGenerator {
 		for (Escape escape : escapes) {
 			title = escape.apply(title);
 		}
-		return String.format("- %s %s%n", title, getLinkToIssue(issue));
+		return (this.generateLinks) ? String.format("- %s %s%n", title, getLinkToIssue(issue))
+				: String.format("- %s%n", title);
 	}
 
 	private String getLinkToIssue(Issue issue) {
@@ -175,13 +175,17 @@ public class ChangelogGenerator {
 		if (this.excludeContributors.contains("*")) {
 			return Collections.emptySet();
 		}
-		return issues.stream().map(this::getPortedReferenceIssue).filter((issue) -> issue.getPullRequest() != null)
-				.map(Issue::getUser).filter(this::isIncludedContributor).collect(Collectors.toSet());
+		return issues.stream()
+			.map(this::getPortedReferenceIssue)
+			.filter((issue) -> issue.getPullRequest() != null)
+			.map(Issue::getUser)
+			.filter(this::isIncludedContributor)
+			.collect(Collectors.toSet());
 	}
 
 	private Issue getPortedReferenceIssue(Issue issue) {
 		for (PortedIssue portedIssue : this.portedIssues) {
-			List<String> labelNames = issue.getLabels().stream().map(Label::getName).collect(Collectors.toList());
+			List<String> labelNames = issue.getLabels().stream().map(Label::getName).toList();
 			if (labelNames.contains(portedIssue.getLabel())) {
 				Pattern pattern = portedIssue.getBodyExpression();
 				Matcher matcher = pattern.matcher(issue.getBody());
@@ -198,7 +202,8 @@ public class ChangelogGenerator {
 	}
 
 	private boolean isIncludedContributor(User user) {
-		return !this.excludeContributors.contains(user.getName());
+		String name = user.getName();
+		return !this.excludeContributors.contains(name) && !name.endsWith("[bot]");
 	}
 
 	private void addContributorsContent(StringBuilder content, Set<User> contributors) {
@@ -209,8 +214,7 @@ public class ChangelogGenerator {
 	}
 
 	private String formatContributors(Set<User> contributors) {
-		List<String> names = contributors.stream().map(User::getName).map((name) -> "@" + name).sorted()
-				.collect(Collectors.toList());
+		List<String> names = contributors.stream().map(User::getName).map((name) -> "@" + name).sorted().toList();
 		StringBuilder formatted = new StringBuilder();
 		String separator = (names.size() > 2) ? ", " : " ";
 		for (int i = 0; i < names.size(); i++) {
@@ -236,7 +240,12 @@ public class ChangelogGenerator {
 	}
 
 	private void writeContentToFile(String content, String path) throws IOException {
-		FileCopyUtils.copy(content, new FileWriter(new File(path)));
+		File file = new File(path).getAbsoluteFile();
+		File parent = file.getParentFile();
+		if (parent != null) {
+			parent.mkdirs();
+		}
+		FileCopyUtils.copy(content, new FileWriter(file));
 	}
 
 	private static Escape gitHubUserMentions() {
@@ -249,13 +258,17 @@ public class ChangelogGenerator {
 
 	private static Escape markdownStyling() {
 		return (input) -> {
+			boolean withinBackticks = false;
 			char previous = ' ';
 			StringBuilder result = new StringBuilder(input.length());
 			for (char c : input.toCharArray()) {
-				if (previous != '\\' && c == '*' || c == '_' || c == '~') {
+				if (!withinBackticks && previous != '\\' && (c == '*' || c == '_' || c == '~')) {
 					result.append('\\');
 				}
 				result.append(c);
+				if (c == '`') {
+					withinBackticks = !withinBackticks;
+				}
 				previous = c;
 			}
 			return result.toString();
