@@ -1,5 +1,5 @@
 /*
- * Copyright 2018-2022 the original author or authors.
+ * Copyright 2018-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -54,7 +54,7 @@ class ChangelogSectionsTests {
 				null, false);
 		ChangelogSections sections = new ChangelogSections(properties);
 		Map<ChangelogSection, List<Issue>> collated = sections
-				.collate(Arrays.asList(enhancement, bug, documentation, dependencyUpgrade));
+			.collate(Arrays.asList(enhancement, bug, documentation, dependencyUpgrade));
 		Map<String, List<Issue>> bySection = getBySection(collated);
 		assertThat(bySection).containsOnlyKeys(":star: New Features", ":lady_beetle: Bug Fixes",
 				":notebook_with_decorative_cover: Documentation", ":hammer: Dependency Upgrades");
@@ -85,7 +85,7 @@ class ChangelogSectionsTests {
 	void collateWhenHasCustomSectionsUsesDefinedSectionsAndDefault() {
 		ApplicationProperties.Section breaksPassivitySection = new ApplicationProperties.Section(":rewind: Non-passive",
 				null, null, Collections.singleton("breaks-passivity"), IssueType.ANY);
-		List<ApplicationProperties.Section> customSections = Arrays.asList(breaksPassivitySection);
+		List<ApplicationProperties.Section> customSections = List.of(breaksPassivitySection);
 		ApplicationProperties properties = new ApplicationProperties(REPO, MilestoneReference.TITLE, customSections,
 				null, null, null, true);
 		ChangelogSections sections = new ChangelogSections(properties);
@@ -167,8 +167,9 @@ class ChangelogSectionsTests {
 	}
 
 	private Map<String, List<Issue>> getBySection(Map<ChangelogSection, List<Issue>> collatedIssues) {
-		return collatedIssues.entrySet().stream()
-				.collect(Collectors.toMap((entry) -> entry.getKey().toString(), Entry::getValue));
+		return collatedIssues.entrySet()
+			.stream()
+			.collect(Collectors.toMap((entry) -> entry.getKey().toString(), Entry::getValue));
 	}
 
 }
